[gd_scene load_steps=5 format=2]

[ext_resource path="res://SCENES/GameController/Baddie.gd" type="Script" id=1]
[ext_resource path="res://SCENES/Bullets/WaypointFollower.tscn" type="PackedScene" id=2]
[ext_resource path="res://3dmodels/astro_axe.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=3]

radius = 1.0
height = 1.0

[node name="Baddie" type="Spatial"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
baddieHealth = 100
baddieSpeed = 1
powerDrain = 0

[node name="WaypointFollower" parent="." index="0" instance=ExtResource( 2 )]

accl = 0.9

[node name="astro_axe" parent="." index="1" instance=ExtResource( 3 )]

transform = Transform( -5, 0, -4.37114e-07, 0, 5, 0, 4.37114e-07, 0, -5, 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Skeleton" parent="astro_axe/10base" index="0"]

bones/0/bound_children = [  ]
bones/2/bound_children = [  ]
bones/10/bound_children = [  ]

[node name="bone_chest" parent="astro_axe/10base/Skeleton" index="1"]

transform = Transform( 0.997104, 0.0749348, -0.0130154, -0.0247508, 0.157884, -0.987148, -0.0719168, 0.98461, 0.159281, 1.41676e-09, 0.0355166, 0.00581407 )

[node name="bone_head" parent="astro_axe/10base/Skeleton" index="2"]

transform = Transform( -0.999616, 0.0268462, -0.00682182, 0.0194809, 0.50629, -0.862143, -0.0196914, -0.861945, -0.506619, 0.0167474, 0.720134, -0.0801814 )

[node name="bone_handR" parent="astro_axe/10base/Skeleton" index="3"]

transform = Transform( -0.974038, -0.220064, 0.0531255, -0.00154373, 0.241119, 0.970494, -0.22638, 0.945216, -0.235198, -0.406823, -0.220335, 0.0471707 )

[node name="AnimationPlayer" parent="astro_axe" index="3"]

autoplay = "10.idle"

[node name="Area" type="Area" parent="astro_axe" index="4"]

transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 0 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 5
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Audio Bus", "Collision", "Reverb Bus", "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="astro_axe/Area" index="0"]

shape = SubResource( 3 )
disabled = false
_sections_unfolded = [ "Transform" ]

[connection signal="TranslationFinishedSignal" from="WaypointFollower" to="." method="_on_WaypointFollower_TranslationFinishedSignal"]

[connection signal="input_event" from="astro_axe/Area" to="." method="_on_Area_input_event"]


[editable path="astro_axe"]
